prusti-tests/tests/parse/ui/implies_fail.stderr
error: expected expression
 --> $DIR/implies_fail.rs:8:17
  |
8 | #[requires(true ==>)]
  |                 ^^^

error: unexpected binary operator
  --> $DIR/implies_fail.rs:11:12
   |
11 | #[requires(==> true)]
   |            ^^^

error: aborting due to 2 previous errors

